remove Data annotation

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -6,11 +6,12 @@
     <title>Login</title>
 </head>
 <body>
+    <h1>Login</h1>
     <form action="" method="post">
         <label>email</label>
-        <input type="text" id="user-email" name="user-email">
+        <input type="text" id="user-email" name="user-email"><br><br>
         <label>password</label>
-        <input type="password" id="password" name="password">
+        <input type="password" id="password" name="password"><br><br>
         <button type="submit">Login</button>
     </form>
 </body>
