--- a/src/main/resources/templates/employee/employee-add-work-hour.html
+++ b/src/main/resources/templates/employee/employee-add-work-hour.html
@@ -27,7 +27,7 @@
           <h5>Unos Radnog Vremena</h5>
         </div>
         <div class="card-body">
-          <form action="/addEmployeeWorkHour">
+          <form action="/employee/workHour/add">
             <!-- Odabir Smjene -->
             <div class="mb-3">
               <label for="shiftType" class="form-label">Odaberi Radno Vrijeme</label>
