--- a/src/main/resources/templates/head-nurse/head-nurse-dashboard.html
+++ b/src/main/resources/templates/head-nurse/head-nurse-dashboard.html
@@ -16,12 +16,16 @@
             <tr>
                 <th>Ime</th>
                 <th>Prezime</th>
+                <th></th>
             </tr>
         </thead>
         <tbody>
-            <tr>
-                <td>User ime</td>
-                <td>User prezime</td>
+            <tr th:each="employee : ${employees}">
+                <td th:text="${employee.firstName}">User ime</td>
+                <td th:text="${employee.lastName}">User prezime</td>
+                <td>
+                    <a th:href="@{'/head-nurse/employeeWorkHours?id=' + ${employee.id}}">Vidi satnicu</a>
+                </td>
             </tr>
         </tbody>
     </table>
