--- a/src/main/resources/templates/rezultat.html
+++ b/src/main/resources/templates/rezultat.html
@@ -8,17 +8,17 @@
     Prikaz kako je algoritam rasporedio:
 </body>
 <p>Dnevna</p>
-<p th:text="'Dan: ' + ${workdayMorning}"></p>
-<p th:text="'Podne: ' + ${workdayNoon}"></p>
-<p th:text="'Noc: ' + ${workdayNight}"></p>
-<p>Subota</p>
-<p th:text="'Dan: ' + ${saturdayMorning}"></p>
-<p th:text="'Podne: ' + ${saturdayNoon}"></p>
-<p th:text="'Noc: ' + ${saturdayNight}"></p>
-<p>Nedjelja</p>
-<p th:text="'Dan: ' + ${sundayMorning}"></p>
-<p th:text="'Podne: ' + ${sundayNoon}"></p>
-<p th:text="'Noc: ' + ${sundayNight}"></p>
+<p th:text="'Dan: ' + ${morning}"></p>
+<p th:text="'Podne: ' + ${nonMorning}"></p>
+<p th:text="'Noc: ' + ${night}"></p>
+<!--<p>Subota</p>-->
+<!--<p th:text="'Dan: ' + ${saturdayMorning}"></p>-->
+<!--<p th:text="'Podne: ' + ${saturdayNoon}"></p>-->
+<!--<p th:text="'Noc: ' + ${saturdayNight}"></p>-->
+<!--<p>Nedjelja</p>-->
+<!--<p th:text="'Dan: ' + ${sundayMorning}"></p>-->
+<!--<p th:text="'Podne: ' + ${sundayNoon}"></p>-->
+<!--<p th:text="'Noc: ' + ${sundayNight}"></p>-->
 
 <button onclick="location.href = '/goToMain'">Povratak na unos vremena</button>
 </html>
