--- a/src/main/resources/templates/rezultat.html
+++ b/src/main/resources/templates/rezultat.html
@@ -8,9 +8,9 @@
     Prikaz kako je algoritam rasporedio:
 </body>
 <p>Dnevna</p>
-<p th:text="'Dan: ' + ${morning}"></p>
-<p th:text="'Podne: ' + ${nonMorning}"></p>
-<p th:text="'Noc: ' + ${night}"></p>
+<p th:text="'Dan: ' + ${morningHour}"></p>
+<p th:text="'Podne: ' + ${noonHour}"></p>
+<p th:text="'Noc: ' + ${nightHour}"></p>
 <!--<p>Subota</p>-->
 <!--<p th:text="'Dan: ' + ${saturdayMorning}"></p>-->
 <!--<p th:text="'Podne: ' + ${saturdayNoon}"></p>-->
