--- a/src/main/resources/templates/employee/employee-list-work-hour.html
+++ b/src/main/resources/templates/employee/employee-list-work-hour.html
@@ -354,7 +354,7 @@
             </table>
         </div>
     </div>
-    <p th:text=${ispis}"></p>
+    <p th:text="${ispis}"></p>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
