--- a/src/main/resources/templates/employee/employee-list-work-hour.html
+++ b/src/main/resources/templates/employee/employee-list-work-hour.html
@@ -86,6 +86,7 @@
                     <p><strong>Ime i Prezime:</strong> Ivan Horvat</p>
                     <p><strong>Ime Tima:</strong> Tim 1</p>
                     <p><strong>Radna jedinica:</strong> Krapina</p>
+
                 </div>
                 <div class="col-md-6">
                     <h5 class="mb-3">Podaci o poslodavcu</h5>
@@ -349,12 +350,19 @@
                         <td>-</td>
                         <td>31</td>
                     </tr>
+                    <tr>
+                        <td>
+                            <p>Poruka:</p>
+                            <p th:text="${ispis != null ? ispis : 'Greska'}">Poruka:</p>
+                        </td>
+                    </tr>
                     <!-- Add more work types... -->
                 </tbody>
             </table>
         </div>
     </div>
-    <p th:text="${ispis}"></p>
+
+
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
