--- a/src/main/resources/templates/head-nurse/head-nurse-dashboard.html
+++ b/src/main/resources/templates/head-nurse/head-nurse-dashboard.html
@@ -16,7 +16,7 @@
             <tr>
                 <th>Ime</th>
                 <th>Prezime</th>
-                <th></th>
+                <th>Glavna Sestra</th>
             </tr>
         </thead>
         <tbody>
