--- a/src/main/resources/templates/head_nurse_employee_list.html
+++ b/src/main/resources/templates/head_nurse_employee_list.html
@@ -73,7 +73,7 @@
 <nav class="navbar navbar-expand-lg">
     <div class="container-fluid">
         <div class="navbar-nav">
-            <img src="images/logo.png" style="height: 50px; width:100px" class="me-5">
+            <img src="/logo.png" style="height: 50px; width:100px" class="me-5">
             <a class="nav-link active me-4" href="">Zaposlenici</a>
         </div>
 
@@ -87,10 +87,10 @@
                     <i class="bi bi-person-circle fs-4"></i> <!-- Dodano fs-4 za veći font-size -->
                 </a>
                 <ul class="dropdown-menu dropdown-menu-end">
-                    <li class="px-3 py-1 text-muted">Admin</li>
+                    <li class="px-3 py-1 text-muted" th:text="${session.appUser.appRole.roleName}">Admin</li>
                     <li class="px-3 pb-2 text-muted small" th:text="${session.appUser.email}">admin@example.com</li>
-                    <li><a class="dropdown-item" href="#"><i class="bi bi-person"></i> Profil</a></li>
-                    <li><a class="dropdown-item" href="#"><i class="bi bi-gear"></i> Postavke</a></li>
+<!--                    <li><a class="dropdown-item" href="#"><i class="bi bi-person"></i> Profil</a></li>-->
+<!--                    <li><a class="dropdown-item" href="#"><i class="bi bi-gear"></i> Postavke</a></li>-->
                     <li><button class="dropdown-item" onclick="location.href = '/logout'"><i class="bi bi-box-arrow-right"></i> Odjava</button></li>
                 </ul>
             </div>
@@ -136,7 +136,7 @@
             <td th:text="${employee.team.teamName}"></td>
             <td th:text="${employee.organizationUnit.organizationUnitName}"></td>
             <td>
-<!--               <a th:href="@{/employeeHours(id=${user.id})}" class="btn btn-dark pt-1">Pregled</a>-->
+               <a th:href="@{/head_nurse/workhour/list(id=${employee.id})}" class="btn btn-dark pt-1">Pregled</a>
             </td>
         </tr>
         </tbody>
