--- a/src/main/resources/templates/employee_workhour_add.html
+++ b/src/main/resources/templates/employee_workhour_add.html
@@ -38,9 +38,9 @@
 <nav class="navbar navbar-expand-lg">
     <div class="container-fluid">
         <div class="navbar-nav">
-            <img src="images/logo.png" style="height: 50px; width:100px" class="me-5">
-            <a class="nav-link active me-4" href="/employeeEntry">Unos radnog vremena</a>
-            <a class="nav-link me-4" href="#">Pregled rada</a>
+            <img src="/logo.png" style="height: 50px; width:100px" class="me-5">
+            <a class="nav-link active me-4" href="/employee/dashboard">Unos radnog vremena</a>
+            <a class="nav-link me-4" href="/employee/workhour/list">Pregled rada</a>
         </div>
 
         <div class="navbar-nav ms-auto d-flex align-items-center">
@@ -53,10 +53,10 @@
                     <i class="bi bi-person-circle fs-4"></i> <!-- Dodano fs-4 za veći font-size -->
                 </a>
                 <ul class="dropdown-menu dropdown-menu-end">
-                    <li class="px-3 py-1 text-muted">Admin</li>
+                    <li class="px-3 py-1 text-muted" th:text="${appUser.appRole.roleName}">Admin</li>
                     <li class="px-3 pb-2 text-muted small" th:text="${appUser.email}">admin@example.com</li>
-                    <li><a class="dropdown-item" href="#"><i class="bi bi-person"></i> Profil</a></li>
-                    <li><a class="dropdown-item" href="#"><i class="bi bi-gear"></i> Postavke</a></li>
+<!--                    <li><a class="dropdown-item" href="#"><i class="bi bi-person"></i> Profil</a></li>-->
+<!--                    <li><a class="dropdown-item" href="#"><i class="bi bi-gear"></i> Postavke</a></li>-->
                     <li><button class="dropdown-item" onclick="location.href = '/logout'"><i class="bi bi-box-arrow-right"></i> Odjava</button></li>
                 </ul>
             </div>
@@ -187,12 +187,6 @@
             }
         });
     });
-
-
-
-
-
-
 
 </script>
 
