--- a/src/main/resources/templates/employee_workhour_list.html
+++ b/src/main/resources/templates/employee_workhour_list.html
@@ -316,50 +316,46 @@
 
             <!-- Add more work types... -->
             </tbody>
-        </table>
 
-        <table class="table schedule-table">
-            <thead>
-            <tr>
-            </tr>
-            </thead>
+
             <tbody>
-                <tr th:each="wtuv : ${workingTimesUserView}">
-                    <td class="work-type" th:text="${wtuv.workTypeName}">Redovan rad subota</td>
-                    <td th:text="${wtuv.day01}">-</td><td>-</td>
-                    <td th:text="${wtuv.day02}">-</td>
-                    <td th:text="${wtuv.day03}">-</td>
-                    <td class="weekend" th:text="${wtuv.day04}">-</td>
-                    <td class="weekend" th:text="${wtuv.day05}">-</td>
-                    <td th:text="${wtuv.day06}">-</td>
-                    <td th:text="${wtuv.day07}">-</td>
-                    <td th:text="${wtuv.day08}">-</td>
-                    <td th:text="${wtuv.day09}">-</td>
-                    <td th:text="${wtuv.day10}">-</td>
-                    <td class="weekend" th:text="${wtuv.day11}">-</td>
-                    <td class="weekend" th:text="${wtuv.day12}">5</td>
-                    <td th:text="${wtuv.day13}">-</td>
-                    <td th:text="${wtuv.day14}">-</td>
-                    <td th:text="${wtuv.day15}">-</td>
-                    <td th:text="${wtuv.day16}">-</td>
-                    <td th:text="${wtuv.day17}">-</td>
-                    <td class="weekend" th:text="${wtuv.day18}">-</td>
-                    <td class="weekend" th:text="${wtuv.day19}">-</td>
-                    <td th:text="${wtuv.day20}">-</td>
-                    <td th:text="${wtuv.day21}">-</td>
-                    <td th:text="${wtuv.day22}">-</td>
-                    <td th:text="${wtuv.day23}">-</td>
-                    <td th:text="${wtuv.day24}">-</td>
-                    <td class="weekend" th:text="${wtuv.day25}">>-</td>
-                    <td class="weekend" th:text="${wtuv.day26}">-</td>
-                    <td th:text="${wtuv.day27}">-</td>
-                    <td th:text="${wtuv.day28}">-</td>
-                    <td th:text="${wtuv.day29}">-</td>
-                    <td th:text="${wtuv.day30}">-</td>
-                    <td th:text="${wtuv.day31}">-</td>
-                    <td>8</td>
-                </tr>
+            <tr th:each="wtuv : ${workingTimesUserView}">
+                <td class="work-type" th:text="${wtuv.workTypeName}">Redovan rad subota</td>
+                <td th:text="${wtuv.day01}">-</td>
+                <td th:text="${wtuv.day02}">-</td>
+                <td th:text="${wtuv.day03}">-</td>
+                <td class="weekend" th:text="${wtuv.day04}">-</td>
+                <td class="weekend" th:text="${wtuv.day05}">-</td>
+                <td th:text="${wtuv.day06}">-</td>
+                <td th:text="${wtuv.day07}">-</td>
+                <td th:text="${wtuv.day08}">-</td>
+                <td th:text="${wtuv.day09}">-</td>
+                <td th:text="${wtuv.day10}">-</td>
+                <td class="weekend" th:text="${wtuv.day11}">-</td>
+                <td class="weekend" th:text="${wtuv.day12}">5</td>
+                <td th:text="${wtuv.day13}">-</td>
+                <td th:text="${wtuv.day14}">-</td>
+                <td th:text="${wtuv.day15}">-</td>
+                <td th:text="${wtuv.day16}">-</td>
+                <td th:text="${wtuv.day17}">-</td>
+                <td class="weekend" th:text="${wtuv.day18}">-</td>
+                <td class="weekend" th:text="${wtuv.day19}">-</td>
+                <td th:text="${wtuv.day20}">-</td>
+                <td th:text="${wtuv.day21}">-</td>
+                <td th:text="${wtuv.day22}">-</td>
+                <td th:text="${wtuv.day23}">-</td>
+                <td th:text="${wtuv.day24}">-</td>
+                <td class="weekend" th:text="${wtuv.day25}">-</td>
+                <td class="weekend" th:text="${wtuv.day26}">-</td>
+                <td th:text="${wtuv.day27}">-</td>
+                <td th:text="${wtuv.day28}">-</td>
+                <td th:text="${wtuv.day29}">-</td>
+                <td th:text="${wtuv.day30}">-</td>
+                <td th:text="${wtuv.day31}">-</td>
+                <td>-</td>
+            </tr>
             </tbody>
+
         </table>
     </div>
 </div>
@@ -387,6 +383,7 @@
             <label for="endShift" class="form-label">Završetak radnog vremena</label>
             <input type="datetime-local" class="form-control" id="endShift" name="endShift" required step="3600">
         </div>
+        <!-- mjesec i godina u hidden polju -->
         <button type="submit" class="btn btn-dark w-100">Spremi</button>
     </form>
 </div>
