--- a/src/main/resources/templates/employee_workhour_list.html
+++ b/src/main/resources/templates/employee_workhour_list.html
@@ -114,7 +114,7 @@
                     <i class="bi bi-person-circle fs-4"></i> <!-- Dodano fs-4 za veći font-size -->
                 </a>
                 <ul class="dropdown-menu dropdown-menu-end">
-                    <li class="px-3 py-1 text-muted" th:text="${appUser.appRole.roleName}">Admin</li>
+                    <li class="px-3 py-1 text-muted" th:text="${appUser.roleName}">Admin</li>
                     <li class="px-3 pb-2 text-muted small" th:text="${appUser.email}">admin@example.com</li>
 <!--                    <li><a class="dropdown-item" href="#"><i class="bi bi-person"></i> Profil</a></li>-->
 <!--                    <li><a class="dropdown-item" href="#"><i class="bi bi-gear"></i> Postavke</a></li>-->
@@ -132,7 +132,7 @@
             <div class="col-md-6">
                 <h5 class="mb-3">Podaci o zaposleniku</h5>
                 <p><strong>Ime i Prezime: </strong> <span th:text="${appUser.firstName + ' ' + appUser.lastName}">Ivan Horvat</span></p>
-                <p><strong>Radna jedinica: </strong> <span th:text="${appUser.team.teamName + ' ' + appUser.organizationUnit.organizationUnitName}">Tim 1</span></p>
+                <p><strong>Radna jedinica: </strong> <span th:text="${appUser.teamName + ' ' + appUser.orgUnitName}">Tim 1</span></p>
             </div>
             <div class="col-md-6">
                 <h5 class="mb-3">Podaci o poslodavcu</h5>
